# rdkb-json-rpc

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  json_hal_client.c  json_hal_client.h  json_hal_common.c  json_hal_common.h  json_hal_server.c  json_hal_server.h  tcp_client.c  tcp_client.h  tcp_server.c  tcp_server.h
json-rpc-common/: json_rpc_common.h
json-schema-validator-wrapper/: CMakeLists.txt  README.md  json_schema_validator_wrapper.cpp  json_schema_validator_wrapper.h  test_json_schema_validator.c
samples/: CMakeLists.txt  json_hal_client_event_test.c  json_hal_client_test.c  json_hal_server_test.c
